// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`itemMap should render a apple icon 1`] = `
<div>
  <ul>
    <li>
      <ForwardRef(Tooltip)
        title="Apple"
      >
        <ForwardRef(LinkComponent)
          href="https://apple.com"
        >
          <Memo />
        </ForwardRef(LinkComponent)>
      </ForwardRef(Tooltip)>
    </li>
  </ul>
</div>
`;

exports[`itemMap should render a docs icon 1`] = `
<div>
  <ul>
    <li>
      <ForwardRef(Tooltip)
        title="Docs"
      >
        <ForwardRef(LinkComponent)
          href="https://docs.com"
        >
          <Memo />
        </ForwardRef(LinkComponent)>
      </ForwardRef(Tooltip)>
    </li>
  </ul>
</div>
`;

exports[`itemMap should render a github icon 1`] = `
<div>
  <ul>
    <li>
      <ForwardRef(Tooltip)
        title="Github"
      >
        <ForwardRef(LinkComponent)
          href="https://github.com"
        >
          <Memo />
        </ForwardRef(LinkComponent)>
      </ForwardRef(Tooltip)>
    </li>
  </ul>
</div>
`;

exports[`itemMap should render a google icon 1`] = `
<div>
  <ul>
    <li>
      <ForwardRef(Tooltip)
        title="Google"
      >
        <ForwardRef(LinkComponent)
          href="https://google.com"
        >
          <Memo />
        </ForwardRef(LinkComponent)>
      </ForwardRef(Tooltip)>
    </li>
  </ul>
</div>
`;

exports[`itemMap should render a link icon 1`] = `
<div>
  <ul>
    <li>
      <ForwardRef(Tooltip)
        title=""
      >
        <ForwardRef(LinkComponent)
          href=""
        >
          <Memo />
        </ForwardRef(LinkComponent)>
      </ForwardRef(Tooltip)>
    </li>
  </ul>
</div>
`;

exports[`itemMap should render a linkedin icon 1`] = `
<div>
  <ul>
    <li>
      <ForwardRef(Tooltip)
        title="LinkedIn"
      >
        <ForwardRef(LinkComponent)
          href="https://linkedin.com"
        >
          <Memo />
        </ForwardRef(LinkComponent)>
      </ForwardRef(Tooltip)>
    </li>
  </ul>
</div>
`;

exports[`itemMap should render a youtube icon 1`] = `
<div>
  <ul>
    <li>
      <ForwardRef(Tooltip)
        title="YouTube"
      >
        <ForwardRef(LinkComponent)
          href="https://youtube.com"
        >
          <Memo />
        </ForwardRef(LinkComponent)>
      </ForwardRef(Tooltip)>
    </li>
  </ul>
</div>
`;
